#798 | Ignore only `testclasses` directory for `web` sub-module